--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "license": "ISC",
   "description": "Collaborative code editor",
   "dependencies": {
+    "@octokit/rest": "^22.0.1",
+    "adm-zip": "^0.5.16",
     "bcrypt": "^6.0.0",
     "chevereto": "^1.3.2",
     "cloudinary": "^2.7.0",
     "connect-mongo": "^5.1.0",
+    "diff-match-patch": "^1.0.5",
     "dotenv": "^17.0.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
@@ -20,6 +23,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.8.1",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "yauzl": "^3.2.0"
   }
 }
